# AnyFlaskApplication

./: Dockerfile  app.py  config.py  docker-compose.yml  models.py  pyproject.toml
instance/: database.db
