[tool.poetry]
name = "anyflaskapplication"
version = "0.1.0"
description = ""
authors = ["PulserCoder <92484659+PulserCoder@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
